--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,13 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- boostrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
-    <!-- style -->
-    <link rel="stylesheet" href="../styles/landing-page/landing-page.css">
-    <link rel="stylesheet" href="../styles/landing-page/responsive.css">
+    <!-- boostrap -->
+    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.css">
 
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,179 +18,14 @@
 
 <body>
     <header class="header shadow-sm p-3 mb-5 bg-white">
-        <nav class="navbar navbar-expand-lg bg-light ">
-            <a class="navbar-brand" href="#">
-                <div class="logo">
-                    <img src="../public/landing-page-picture/green-city 1.png" alt="Logo">
-                </div>
-                <div class="title">
-                    <h1>PeduliLingkungan</h1>
-                </div>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav ms-auto"">
-                    <li class=" nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Tentang Sampah</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Login</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+        <nav-bar></nav-bar>
     </header>
     <main id="content">
 
-        <!-- container-1 -->
-        <section class="section-one">
-            <div class="row">
-                <div class="col">
-                    <div class="section-one-left">
-                        <img class="img" src="../public/landing-page-picture/container-1-img.png" alt="">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="section-one-right">
-                        <h2 class="section-one-title">Bergabung dengan Kami #PeduliLingkungan</h2>
-                        <button type="button" class="btn btn-primary btn-lg">Get Started</button>
-                    </div>
-                </div>
-            </div>
-        </section>
 
-        <!-- container 2 -->
-        <section class="section-two">
-            <div class="row">
-                <div class="col">
-                    <div class="section-two-left">
-                        <img src="../public/landing-page-picture/container-2 img.png"
-                            alt="mengapa kita harus menjaga sampah">
-                    </div>
-
-                </div>
-                <div class="col">
-                    <div class="section-two-right">
-                        <h2 class="section-two-title">MENGAPA KITA HARUS MENJAGA KEBERSIHAN?</h2>
-                        <p class="section-two-text">Alasan pentingnya dalam menjaga kebersihan lingkungan yang pertama
-                            adalah untuk meningkatkan kesehatan manusia. Kondisi lingkungan yang tidak baik
-                            berkaitan dengan lingkungan kesehatan, serta menimbulkan beberapa infeksi dan penyakit
-                            akibat
-                            kotornya suatu lingkungan</p>
-                    </div>
-
-                </div>
-            </div>
-        </section>
-
-        <!-- container 3 -->
-        <section class="section-three">
-            <h2 class="section-three-title">PeduliLingkungan <br> Hadir Menciptakan Dampak</h2>
-
-            <div class="row">
-                <div class="col">
-                    <div class="grid-style">
-                        <img src="../public/landing-page-picture/lingkungan-img.png" alt="lingkungan">
-                        <div class="descript-text-one">
-                            <h1 class="descript-text">lingkungan</h1>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="grid-style"><img src="../public/landing-page-picture/ekonomi-img.png" alt="sosial">
-                        <div class="descript-text-one">
-                            <h1 class="descript-text">Ekonomi</h1>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <br>
-            <br>
-            <div class="row">
-                <div class="col">
-                    <div class="grid-style"><img src="../public/landing-page-picture/sosial-img.png" alt="ekonomi">
-                        <div class="descript-text-one">
-                            <h1 class="descript-text">Sosial</h1>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="grid-style"><img src="../public/landing-page-picture/keseharan-img.png" alt="kesehatan">
-                        <div class="descript-text-one">
-                            <h1 class="descript-text">kesehatan</h1>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Container 4 -->
-        <section class="last-section">
-            <div class="row">
-                <div class="col last-descript">
-                    <h1>HIDUP SEHAT DENGAN KEBERSIHAN</h1>
-                    <h3>Bantu jaga kebersihan lingkungan</h3>
-                    <p>Kini dengan PeduliLingkungan dapat membantu dan menjaga kebersihan lingkungan Mari kita mulai
-                        dengan belajar tentang sampah</p>
-                    <button>Tentang Sampah</button>
-                </div>
-                <div class="col">
-                    <img class="image-last" src="../public/landing-page-picture/container-4 img.png"
-                        alt="hidup sehat dengan kebersihan">
-                </div>
-            </div>
-        </section>
     </main>
-    <footer class="footer">
-        <div class="footer-set shadow-sm">
-            <div class="row footer-top">
-                <div class="col">
-                    <a class="footer-brand" href="#">
-                        <div class="logo">
-                            <img src="../public/landing-page-picture/green-city 1.png" alt="Logo">
-                        </div>
-                        <div class="title">
-                            <h1>PeduliLingkungan</h1>
-                            <p>Lingkungan Sehat Dan Bersih</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col navigation-set">
-                    <div class="navigation">
-                        <h1 class="row">Navigasi</h1>
-                        <h3 class="row"><a href="#">Home</a></h3>
-                        <h3 class="row"><a href="#">Tentang Sampah</a></h3>
-                        <h3 class="row"><a href="#">About</a></h3>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="contact">
-                        <h1 class="row">Kontak</h1>
-                        <h3 class="row"><a href="#">Jerry</a></h3>
-                        <h3 class="row"><a href="#">Fariz</a></h3>
-                        <h3 class="row"><a href="#">Afiq</a></h3>
-                        <h3 class="row"><a href="#">Fajar</a></h3>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <p>Copyright &copy; 2022 - PeduliLingkungan. All Rights Reserved</p>
-        </div>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
+    <custom-footer></custom-footer>
+    <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
