Image masih belum bisa ter-load
Pada bagian ini , image masih belum bisa terload karena masih ada beberapa loader yang belum diinstall di webpack

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,31 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- boostrap -->
-    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.css" />
 
     <!-- font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-    <title>Document</title>
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+    <title>PeduliLingkungan</title>
+  </head>
 
-<body>
+  <body>
+    <img src="./public/landing-page-picture/container-1-img.png" alt="image-yang dibuat jerry">
     <header class="header shadow-sm p-3 mb-5 bg-white">
-        <nav-bar></nav-bar>
+      <nav-bar></nav-bar>
     </header>
-    <main id="content">
-
-
-    </main>
+    <main id="content"></main>
     <custom-footer></custom-footer>
     <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-</body>
-
-</html>
+  </body>
+</html
