--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="./public/favicon.ico" />
+    <link rel="manifest" href="./public/app.webmanifest">
     <title>PeduliLingkungan</title>
   </head>
   <body>
