--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -1,5 +1,27 @@
 /* Responsivity untuk bagian dari Navbar */
 
+@media screen and (max-width: 1200px){
+  html{
+    font-size: 12px;
+  }
+
+  .pedulilingkungan-description h1{
+    font-size: 32px;
+  }
+
+  .pedulilingkungan-description p {
+    font-size: 16px;
+  }
+
+  .team-description h1{
+    font-size: 32px;
+  }
+
+  .team-description p{
+    font-size: 16px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   html {
     font-size: 16px;
@@ -26,15 +48,15 @@
   }
 }
 
-@media screen and (max-width: 499px) {
+@media screen and (max-width: 500px) {
   .navbar-brand span {
-    font-size: 1.5rem;
+    font-size: 24px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .navbar-brand span {
-    font-size: 1.4rem;
+    font-size: 20px;
   }
 }
 
@@ -76,6 +98,14 @@
 
   .container-satu .row {
     flex-direction: column-reverse;
+  }
+
+  .container-dua .row-satu p{
+    padding-top: 20px;
+  }
+
+  .container-dua .row-ketiga p{
+    padding-top: 20px;
   }
 
   a.nav-link {
