--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -21,7 +21,7 @@ nav.navbar {
 a.nav-link {
   margin-right: 20px;
   font-weight: 600;
-  font-size: 1.5rem;
+  font-size: 24px;
   font-family: 'Montserrat';
   font-style: normal;
 }
