--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,96 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./public/favicon.ico" />
-    <link rel="manifest" href="./public/app.webmanifest">
-    <title>PeduliLingkungan</title>
-  </head>
-  <body>
-    <!-- Awal dari header -->
-    <header class="sticky-top">
-      <!-- Awal dari navigator -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light shadow p-3">
-        <div class="container-fluid">
-          <div class="navbar-brand">
-            <img src="./public/company-logo.png" class="company-image" alt="company-logo" />
-            <span>Peduli Lingkungan</span>
-          </div>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" href="#">Beranda</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#/tentang-sampah">Tentang Sampah</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#/about">Tentang Kami</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      <!-- Akhir dari navigator -->
-    </header>
-    <!-- Akhir dari header -->
-    <main id="main-content"></main>
-    <footer>
-      <div class="first-footer">
-        <div class="footer-header">
-          <div>
-            <h1>PeduliLingkungan</h1>
-            <p>Lingkungan bersih dan sehat</p>
-          </div>
-        </div>
-        <div class="footer-navigation">
-          <h1>Navigasi</h1>
-          <div class="navigation-list">
-            <ul>
-              <li>
-                <a class="navigation" href="#">Home</a>
-              </li>
-              <li>
-                <a class="navigation" href="#/tentang-sampah">Tentang Sampah</a>
-              </li>
-              <li>
-                <a class="navigation" href="#/about">About Us</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="footer-contact">
-          <h1>Kontak</h1>
-          <div class="contact-list">
-            <ul>
-              <li>
-                <a href="https://www.linkedin.com/in/jerry-johnson-b77250208/" target="_blank">Jerry</a>
-              </li>
-              <li>
-                <a href="https://www.linkedin.com/in/m-fariz-naufal-r-813144213" target="_blank">Fariz</a>
-              </li>
-              <li>
-                <a href="https://www.linkedin.com/in/muhammad-afiq-2a097314b/" target="_blank">Afiq</a>
-              </li>
-              <li>
-                <a href="https://www.linkedin.com/in/fajar-febriansyah-159349241/" target="_blank">Fajar</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="footer-address">
-          <h1>Alamat</h1>
-          <p>JL. GESIT AGUNG , MEDAN BARAT , 20116 , SUMATERA UTARA , INDONESIA</p>
-        </div>
-      </div>
-      <hr />
-      <div class="copyright">
-        <p>Copyright © 2022 - PeduliLingkungan. All Rights Reserved.</p>
-      </div>
-    </footer>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#379237">
+  <link rel="apple-touch-icon" href="./icons/icon-192x192.png">
+  <link rel="icon" href="./favicon.ico" />
+  <link rel="manifest" href="./app.webmanifest">
+  <title>PeduliLingkungan</title>
+</head>
+
+<body>
+  <!-- Awal dari header -->
+  <header>
+    <!-- Awal dari navigator -->
+    <nav-bar></nav-bar>
+    <!-- Akhir dari navigator -->
+  </header>
+  <!-- Akhir dari header -->
+  <main id="main-content"></main>
+  <custom-footer></custom-footer>
+</body>
+
 </html>
