--- a/src/styles/tentang-sampah-main.css
+++ b/src/styles/tentang-sampah-main.css
@@ -1,185 +1,41 @@
-/* Awal dari Container besar */
+@import url('https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Inter:wght@400;500;600&family=Montserrat:ital,wght@0,400;1,600&display=swap');
 
-.container-all {
-  margin: 0 30px;
+:root {
+  --first-color: #68b984;
+  --font-color: #379237;
+  --log-color: #54ac41;
+  --footer-color: #344d67;
+  --navbar-color: #f2f1ef;
 }
 
-/* Akhir dari container besar */
-
-/* Awal dari container-1 */
-.container-satu {
-  margin-top: 50px;
-}
-
-.container-all h3 {
-  margin-top: 40px;
-  font-style: normal;
-  font-size: 2.5rem;
-  display: flex;
-  align-items: center;
+.header-text-container {
+  font-family: 'Inter', sans-serif;
   font-weight: 600;
-  color: #379237;
+  color: var(--font-color);
 }
 
-.container-satu p {
-  display: block;
-  margin-top: 30px;
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 1.5rem;
-  color: rgba(0, 0, 0, 0.73);
+.paragph-text {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
 }
 
-.container-satu img {
-  display: block;
-  border-radius: 30px;
-  box-shadow: 2px 4px 4px 4px rgba(0, 0, 0, 0.25);
+.kolom {
+  border: 1px solid;
 }
 
-/* Akhir dari container-1 */
+/* responsive */
 
-/* Awal dari container 2 */
-
-.container-dua {
-  margin-top: 40px;
+@media screen and (max-width: 768px) {
+  .first {
+    order: 1;
+  }
+  .second {
+    order: 2;
+  }
+  .third {
+    order: 3;
+  }
+  .fourth {
+    order: 4;
+  }
 }
-
-.container-dua h3 {
-  font-style: normal;
-  font-weight: 600;
-  font-size: 2.5rem;
-  color: #379237;
-  margin: 0;
-}
-
-.container-dua .image-1 {
-  display: block;
-  border-radius: 30px;
-  box-shadow: 2px 4px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-.container-dua .row-satu {
-  margin-top: 40px;
-}
-
-.container-dua .row-satu p {
-  margin-top: 20px;
-  align-self: center;
-  justify-content: center;
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 1.5rem;
-  color: rgba(0, 0, 0, 0.73);
-  display: block;
-}
-
-.container-dua .image-2 {
-  display: block;
-  border-radius: 30px;
-  box-shadow: 2px 4px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-.container-dua .row-dua {
-  margin-top: 40px;
-}
-
-.container-dua .row-dua p {
-  margin-top: 40px;
-  align-self: center;
-  justify-content: center;
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 1.5rem;
-  color: rgba(0, 0, 0, 0.73);
-  display: block;
-}
-
-.container-dua .row-ketiga p {
-  margin-top: 20px;
-  align-self: center;
-  justify-content: center;
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 1.5rem;
-  color: rgba(0, 0, 0, 0.73);
-  display: block;
-}
-
-.container-dua .image-3 {
-  display: block;
-  border-radius: 30px;
-  box-shadow: 2px 4px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-.container-dua .row-ketiga {
-  margin-top: 40px;
-}
-
-/* Akhir dari container 2 */
-
-/* Awal dari container 3*/
-
-.container-tiga {
-  display: block;
-  margin-top: 40px;
-  margin-bottom: 60px;
-}
-
-.container-tiga h3 {
-  font-style: normal;
-  font-weight: 600;
-  align-items: center;
-  text-align: center;
-  color: #379237;
-  font-size: 2.5rem;
-  margin-bottom: 30px;
-}
-
-.container-tiga .card-hijau {
-  background-color: #68b984;
-  height: 250px;
-  width: 250px;
-  margin: 0;
-  border-radius: 30px;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-}
-
-.container-tiga .card-danger {
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.container-tiga .card-organic {
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.container-tiga .card-anorganic {
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.container-tiga .card-hijau img {
-  height: 200px;
-  width: 200px;
-  object-fit: cover;
-}
-
-.container-tiga .card-hijau span {
-  font-size: 32px;
-  color: #100703;
-  font-weight: 600;
-}
-
-.container-tiga .row-kedua {
-  margin: 0 100 0 100;
-}
-
-/* Akhir dari container 3 */
