--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -20,7 +20,9 @@
   </header>
   <!-- Akhir dari header -->
   <main id="main-content"></main>
-  <custom-footer></custom-footer>
+  <footer>
+    <custom-footer></custom-footer>
+  </footer>
 </body>
 
 </html>
