Styling yang uda fix
Styling yang sudah fix disetujui sama mas Fajar

--- a/src/styles/landing-page-main.css
+++ b/src/styles/landing-page-main.css
@@ -36,6 +36,10 @@
   color: var(--log-color);
 }
 
+#main-content{
+  background-color: white;
+}
+
 /* section 1 */
 .text-center .text {
   color: var(--first-color);
