--- a/src/styles/tentang-sampah-main.css
+++ b/src/styles/tentang-sampah-main.css
@@ -9,57 +9,77 @@
   font-weight: 400;
 }
 
-/* mainan baru */
-.hover-1 {
-  overflow: hidden;
-  position: relative;
-  padding-bottom: 100%;
+/* Awal dari container 3*/
+
+.container-tiga {
+  margin-top: 40px;
+  margin-bottom: 60px;
 }
 
-.hover-overlay-1 {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 90;
-  transition: all 0.4s;
-}
-
-.hover-1 img {
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  transition: all 0.3s;
-}
-
-.hover-content-1 {
-  position: relative;
-  z-index: 99;
-}
-
-.hover-2 .hover-overlay-1 {
-  background: linear-gradient(to top, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.1));
-  border-radius: 30px;
-}
-
-.hover-2-description {
-  width: 100%;
-  position: absolute;
-  bottom: 0;
-  opacity: 0;
-  left: 0;
+.container-tiga h3 {
+  font-style: normal;
+  font-weight: 600;
+  align-items: center;
   text-align: center;
-  z-index: 99;
-  transition: all 0.3s;
+  color: #379237;
+  font-size: 2.5rem;
+  margin-bottom: 30px;
 }
 
-.hover-2:hover .hover-2-description {
-  bottom: 8rem;
-  opacity: 1;
+.container-tiga .card-hijau {
+  padding: 10px;
+  background-color: #68b984;
+  height: 280px;
+  width: 280px;
+  margin: 0;
+  border-radius: 30px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
-.hover-2:hover .hover-overlay-1 {
-  background: rgba(0, 0, 0, 0.6);
+.container-tiga .card-danger {
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.container-tiga .card-organic {
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.container-tiga .card-anorganic {
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.container-tiga .card-hijau img {
+  height: 200px;
+  width: 200px;
+  object-fit: cover;
+}
+
+.container-tiga .card-hijau span {
+  font-family: 'Montserrat' !important;
+  font-size: 32px;
+  color: #100703;
+  font-weight: 600;
+}
+
+.container-tiga .row-kedua {
+  margin: 0 100 0 100;
+}
+
+.changebg{
+  background-color: green;
+  opacity: 50%;
+}
+
+/* Akhir dari container 3 */
+
+div.col-lg-5.col-md-6.mt-3.text-center.d-flex,
+div.second.col-lg-5.col-md-6.text-center.d-flex,
+div.col-lg-5.col-md-6.mt-3.text-center.d-flex{
+  align-items: center;
 }
