--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#379237">
+  <meta name="dicoding:email" content="mail.jerryjohnson@gmail.com">
   <link rel="apple-touch-icon" href="./icons/icon-192x192.png">
   <link rel="icon" href="./favicon.ico" />
   <link rel="manifest" href="./app.webmanifest">
-  <title>PeduliLingkungan</title> 
+  <title>PeduliLingkungan</title>
 </head>
 
 <body>
