--- a/src/styles/tentang-sampah-main.css
+++ b/src/styles/tentang-sampah-main.css
@@ -24,6 +24,7 @@ a.pargph-text{
 /* Awal dari container 3*/
 
 .container-tiga {
+  overflow: hidden;
   margin-top: 40px;
   margin-bottom: 60px;
 }
